test/e2e/fixtures/bufferlimitbytes-basic/queries.json
[
  {"url": "/foo/", "method": "GET"},
  {"url": "/ambassador/v0/diag/", "method": "GET"},
  {"url": "/config_dump", "method": "GET"}
]
